# os_-ab1

./: .gitignore  CMakeLists.txt  array  clang-tidy-checks.txt
.github/workflows/: ci.yml
scripts/: bin_benchmark_starter.sh  combined_starter.sh  ema_search_int_benchmark_starter.sh
solution/: CMakeLists.txt  compile_flags.txt
solution/include/: built_in_commands.h  external_commands.h  shell.h  tools.h
solution/include/bin-search/: bin_search.h  sorted_array_generator.h
solution/include/combined-benchmark/: combined.h
solution/include/ema-search-int/: array_generator.h  ema_search_int.h  linear_search.h  tools.h
solution/include/shell/: built_in_commands.h  tools.h
solution/src/: built_in_commands.c  external_commands.c  main.c  shell.c  tools.c
solution/src/bin-search/: bin_search.c  sorted_array_generator.c
solution/src/combined-benchmark/: combined.c
solution/src/ema-search-int/: array_generator.c  ema_search_int.c  linear_search.c  tools.c
solution/src/shell/: built_in_commands.c  external_commands.c  shell.c  tools.c
tester/: bin_search_test1.sh  bin_search_test2.sh  ema_search_test1.sh  entrypoint.sh  shell_test1.sh  shell_test2.sh  shell_test3.sh  shell_test4.sh  test1.sh  test2.sh  test3.sh  test4.sh
